Agregado el contenido adicional en master

--- a/blogspot.html
+++ b/blogspot.html
@@ -12,6 +12,9 @@
         <div id="post">
             <h1>Esto es el titulo del post</h1>
             <p>Y este es un parrafo del post</p>
+            <p>
+                Este es un texto que agregue extra en el branch master
+            </p>
         </div>
     </div>
         
