--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            cabecera <span id="tagline"> Tu blog de confianza</span>
+            cabecera <span id="tagline"> Crearemos un conflicto aqui?
+            </span>
         </div>
         <div id="post">
             <h1>Esto es el titulo del post</h1>
