cambio de cabecera y fuente en color azul

--- a/blogspot.html
+++ b/blogspot.html
@@ -10,13 +10,16 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            cabecera <span id="tagline"> Tu blog de confianza</span>
+            cabecera <span id="tagline"> Tu blog en rama master</span>
         </div>
         <div id="post">
             <h1>Esto es el titulo del post</h1>
             <p>Y este es un parrafo del post</p>
             <p>
                 Este es un texto que agregue extra en el branch master
+            </p>
+            <p>
+            Este parrafo lo estoy agregando nomas por agregarlo, solo quiero que aparezca algo extra en la rama master de nuestro git. Quiza la proxima vez solamente agregue texto a lo menso
             </p>
         </div>
     </div>
