Pasamos de HTTPS a SSH

--- a/blogspot.html
+++ b/blogspot.html
@@ -22,6 +22,9 @@
             <p>
             Este parrafo lo estoy agregando nomas por agregarlo, solo quiero que aparezca algo extra en la rama master de nuestro git. Quiza la proxima vez solamente agregue texto a lo menso
             </p>
+            <p>
+                Este parrafo nos dejara ver si los cambios en el protocolo, pasamos de HTTPS a SSH, fueron efectuados
+            </p>
         </div>
     </div>
         
