Color de fondo, logo

--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,9 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            cabecera <span id="tagline"> Crearemos un conflicto aqui?
+            <img id="logo" src="imagenes/images.png">
+            SuperPost <span id="tagline"> 
+                Blog de cabecera
             </span>
         </div>
         <div id="post">
