--- a/blogspot.html
+++ b/blogspot.html
@@ -20,6 +20,9 @@
                 Este es un texto que agregue extra en el branch master
             </p>
         </div>
+        <div id="footer">
+            Hecho con amor en Platzi ✨
+        </div>
     </div>
         
 </body>
