Nuevo segmento de parrafo agregado

--- a/blogspot.html
+++ b/blogspot.html
@@ -20,6 +20,7 @@
             <p>Y este es un parrafo del post</p>
             <p>
                 Este es un texto que agregue extra en el branch master
+                Se supone que en esta parte deberia arreglar solamente un typo pero no importa, agregare mas contenido solo para que se vea mas lleno de texto mi documento xD
             </p>
             <p>
             Este parrafo lo estoy agregando nomas por agregarlo, solo quiero que aparezca algo extra en la rama master de nuestro git. Quiza la proxima vez solamente agregue texto a lo menso
